# gitremind

./: package-lock.json  package.json
.cursor/rules/: structure.mdc
.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/app/_not-found/: page.js  (+1 more)
.next/server/vendor-chunks/: @swc.js
.next/static/chunks/: _error.js  webpack.js
.next/static/webpack/: webpack.62011dac4c20a482.hot-update.js  webpack.827456f2f04f8efc.hot-update.js  webpack.eb5165c2ddd74fee.hot-update.js
.next/types/app/: layout.ts
backend/: .env.template  .gitignore  Dockerfile  README.md  build.sh  dockerfile  main.py  pyproject.toml  run_api.py  run_worker.py
backend/.cursor/gold/: user.py
backend/.cursor/rules/: gold.mdc  uv.mdc
backend/src/: app.py  worker.py
backend/src/api/: errors.py  routes.py
backend/src/api/models/: requests.py  response.py
backend/src/api/scheduler/: client.py  tasks.py
backend/src/services/: __init__.py  reminder.py
frontend/: .gitignore  package-lock.json  package.json
frontend/.cursor/gold/: Dashboard.tsx
frontend/.cursor/rules/: gold-standards.mdc
frontend/src/app/: globals.css  page.module.css  page.tsx
frontend/src/hooks/: useAuth.ts  useSettings.ts
frontend/src/styles/: dashboard.scss  landing.scss
frontend/src/types/: settings.ts
src/app/: page.tsx
src/app/dashboard/: page.tsx
src/hooks/: useSettings.ts
src/lib/supabase/: middleware.ts
worker/: .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
worker/src/: client.py  tasks.py
(+15 files in other folders)
