[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitremind_backend"
version = "0.1.0"
description = "Backend API for GitRemind - A reminder service with FastAPI and Celery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "celery>=5.3.4",
    "python-dotenv>=1.0.0",
    "redis>=5.0.1",
    "slowapi>=0.1.8",
]

[project.scripts]
gitremind_backend = "uv run uvicorn src.app:app --host 0.0.0.0 --port 8000"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
